# MCCPP

./: .gitignore  .gitmodules  CMakeLists.txt
res/shaders/: fragment.glsl  geometry.glsl  lighting_compute.glsl  vertex.glsl
res/textures/items/: slimeball.png.mcmeta
src/: MCCPP.cpp  MCCPP.h  PlayerController.cpp  PlayerController.h  PlayerMP.cpp  PlayerMP.h  TextureAtlas.cpp  TextureAtlas.h  main.cpp
src/blocks/: Block.cpp  Block.h  Chunk.cpp  Chunk.h  Mesh.cpp  Mesh.h  Superchunk.cpp  Superchunk.h
src/graphics/: Camera.cpp  Camera.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  Vertex.h  Window.cpp  Window.h
src/graphics/buffers/: VertexBuffer.cpp  VertexBuffer.h
src/lodepng/: lodepng.cpp  lodepng.h
src/network/: Encryption.hpp  HTTPRequest.hpp  NetworkManager.cpp  NetworkManager.h  SocketHandler.cpp  SocketHandler.h  digest.h  hashlib.h
src/network/packet/: Packet.cpp  Packet.h
src/network/packet/login/: PacketDisconnect.cpp  PacketDisconnect.h  PacketEncryptionRequest.cpp  PacketEncryptionRequest.h  PacketEncryptionResponse.cpp  PacketEncryptionResponse.h  PacketHandshake.cpp  PacketHandshake.h  PacketLoginStart.cpp  PacketLoginStart.h  PacketLoginSuccess.cpp  PacketLoginSuccess.h  PacketSetCompression.cpp  PacketSetCompression.h
src/network/packet/play/: PacketHeldItemChange.cpp  PacketHeldItemChange.h  PacketJoinGame.cpp  PacketJoinGame.h  PacketKeepAlive.cpp  PacketKeepAlive.h  PacketMapChunkBulk.cpp  PacketMapChunkBulk.h  PacketPlayerAbilities.cpp  PacketPlayerAbilities.h  PacketPlayerListItem.cpp  PacketPlayerListItem.h  PacketPlayerPosAndLook.cpp  PacketPlayerPosAndLook.h  PacketPluginMessage.cpp  PacketPluginMessage.h  PacketServerDifficulty.cpp  PacketServerDifficulty.h  PacketSpawnPosition.cpp  PacketSpawnPosition.h  PacketStatistics.cpp  PacketStatistics.h  PacketTimeUpdate.cpp  PacketTimeUpdate.h
src/network/packet/play/clientbound/: PacketHeldItemChange.cpp  PacketHeldItemChange.h  PacketJoinGame.cpp  PacketJoinGame.h  PacketKeepAlive.cpp  PacketKeepAlive.h  PacketMapChunkBulk.cpp  PacketMapChunkBulk.h  PacketPlayerAbilities.cpp  PacketPlayerAbilities.h  PacketPlayerListItem.cpp  PacketPlayerListItem.h  PacketPlayerPosAndLook.cpp  PacketPlayerPosAndLook.h  PacketPluginMessage.cpp  (+9 more)
src/util/: InputManager.cpp  InputManager.h  Log.cpp  Log.h  UUID.h
(+2 files in other folders)
